hphp/hack/test/typecheck/reactive/mutable_value_immutable_method1.php.exp
File "mutable_value_immutable_method1.php", line 6, characters 12-33:
Cannot call non-mutable function on mutable expression (Typing[4261])
File "mutable_value_immutable_method1.php", line 10, characters 19-33:
This function is not marked as <<__Mutable>>.
