hphp/hack/test/typecheck/reactive/mutable_value_immutable_method1.php
<?hh // strict

class A {
  <<__Rx, __Mutable>>
  public function mutableMethod(): int {
    return $this->immutableMethod();
  }

  <<__Rx>>
  public function immutableMethod(): int {
    return 42;
  }
}
